@@ -2,12 +2,14 @@ package com.enonic.xp.impl.server.rest;
 
 import java.time.Instant;
 import java.util.Arrays;
+import java.util.List;
 
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 import org.mockito.Mockito;
 
 import jakarta.ws.rs.core.MediaType;
+import jakarta.ws.rs.core.Response;
 
 import com.enonic.xp.jaxrs.impl.JaxRsResourceTestSupport;
 import com.enonic.xp.node.DeleteSnapshotParams;
@@ -19,105 +21,125 @@ import com.enonic.xp.node.SnapshotResult;
 import com.enonic.xp.node.SnapshotResults;
 import com.enonic.xp.repository.RepositoryId;
 import com.enonic.xp.snapshot.SnapshotService;
+import com.enonic.xp.task.TaskId;
+import com.enonic.xp.task.TaskInfo;
+import com.enonic.xp.task.TaskService;
 
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.isA;
 import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.when;
 
 class SnapshotResourceTest
     extends JaxRsResourceTestSupport
 {
     private SnapshotService snapshotService;
 
+    private TaskService taskService;
+
     @Test
     void snapshot()
         throws Exception
     {
-
-        final SnapshotResult snapshotResult = SnapshotResult.create()
-            .name( "name" )
-            .reason( "because reasons" )
-            .timestamp( Instant.ofEpochMilli( 1438866915875L ) )
-            .state( SnapshotResult.State.SUCCESS )
-            .indices( Arrays.asList( "46f2a9" ) )
-            .build();
-
-        Mockito.when( this.snapshotService.snapshot( isA( SnapshotParams.class ) ) ).thenReturn( snapshotResult );
+        when( taskService.getRunningTasks() ).thenReturn( List.of() );
+        when( taskService.submitLocalTask( any() ) ).thenReturn( TaskId.from( "task-id-1" ) );
 
         final String result = request().path( "repo/snapshot" )
             .entity( readFromFile( "snapshot_params.json" ), MediaType.APPLICATION_JSON_TYPE )
             .post()
             .getAsString();
 
-        assertJson( "snapshot.json", result );
+        assertStringJson( "{\"taskId\" : \"task-id-1\"}", result );
+    }
+
+    @Test
+    void snapshot_rejects_when_snapshot_running()
+        throws Exception
+    {
+        final TaskInfo runningTask = TaskInfo.create()
+            .id( TaskId.from( "running-task" ) )
+            .name( "snapshot" )
+            .description( "Snapshot in progress" )
+            .application( com.enonic.xp.app.ApplicationKey.from( "com.enonic.xp.app.system" ) )
+            .startTime( Instant.now() )
+            .build();
+
+        when( taskService.getRunningTasks() ).thenReturn( List.of( runningTask ) );
+
+        final int status = request().path( "repo/snapshot" )
+            .entity( readFromFile( "snapshot_params.json" ), MediaType.APPLICATION_JSON_TYPE )
+            .post()
+            .getStatus();
+
+        Assertions.assertEquals( Response.Status.CONFLICT.getStatusCode(), status );
     }
 
     @Test
     void restore()
         throws Exception
     {
-        final RestoreResult restoreResult = RestoreResult.create()
-            .repositoryId( RepositoryId.from( "repo-id" ) )
-            .name( "name" )
-            .message( "He's dead, Jim." )
-            .indices( Arrays.asList( "bc02aa" ) )
-            .failed( false )
-            .build();
-
-        Mockito.when( this.snapshotService.restore( isA( RestoreParams.class ) ) ).thenReturn( restoreResult );
+        when( taskService.getRunningTasks() ).thenReturn( List.of() );
+        when( taskService.submitLocalTask( any() ) ).thenReturn( TaskId.from( "task-id-2" ) );
 
         final String result = request().path( "repo/snapshot/restore" )
             .entity( readFromFile( "restore_params.json" ), MediaType.APPLICATION_JSON_TYPE )
             .post()
             .getAsString();
 
-        assertJson( "restore.json", result );
+        assertStringJson( "{\"taskId\" : \"task-id-2\"}", result );
+    }
+
+    @Test
+    void restore_rejects_when_restore_running()
+        throws Exception
+    {
+        final TaskInfo runningTask = TaskInfo.create()
+            .id( TaskId.from( "running-task" ) )
+            .name( "restore" )
+            .description( "Restore in progress" )
+            .application( com.enonic.xp.app.ApplicationKey.from( "com.enonic.xp.app.system" ) )
+            .startTime( Instant.now() )
+            .build();
+
+        when( taskService.getRunningTasks() ).thenReturn( List.of( runningTask ) );
+
+        final int status = request().path( "repo/snapshot/restore" )
+            .entity( readFromFile( "restore_params.json" ), MediaType.APPLICATION_JSON_TYPE )
+            .post()
+            .getStatus();
+
+        Assertions.assertEquals( Response.Status.CONFLICT.getStatusCode(), status );
     }
 
     @Test
     void restore_with_deletion()
         throws Exception
     {
-        final RestoreResult restoreResult = RestoreResult.create()
-            .repositoryId( RepositoryId.from( "repo-id" ) )
-            .name( "name" )
-            .message( "He's dead, Jim." )
-            .indices( Arrays.asList( "bc02aa" ) )
-            .failed( false )
-            .build();
-
-        Mockito.when( this.snapshotService.restore( isA( RestoreParams.class ) ) ).thenAnswer( ( params ) -> {
-            Assertions.assertTrue( ( (RestoreParams) params.getArgument( 0 ) ).isForce() );
-            return restoreResult;
-        } );
+        when( taskService.getRunningTasks() ).thenReturn( List.of() );
+        when( taskService.submitLocalTask( any() ) ).thenReturn( TaskId.from( "task-id-3" ) );
 
         final String result = request().path( "repo/snapshot/restore" )
             .entity( readFromFile( "restore_with_deletion_params.json" ), MediaType.APPLICATION_JSON_TYPE )
             .post()
             .getAsString();
 
-        assertJson( "restore.json", result );
+        assertStringJson( "{\"taskId\" : \"task-id-3\"}", result );
     }
 
     @Test
     void restore_latest()
         throws Exception
     {
-        final RestoreResult restoreResult = RestoreResult.create()
-            .repositoryId( RepositoryId.from( "repo-id" ) )
-            .name( "name" )
-            .message( "He's dead, Jim." )
-            .indices( Arrays.asList( "bc02aa" ) )
-            .failed( false )
-            .build();
-
-        Mockito.when( this.snapshotService.restore( isA( RestoreParams.class ) ) ).thenReturn( restoreResult );
+        when( taskService.getRunningTasks() ).thenReturn( List.of() );
+        when( taskService.submitLocalTask( any() ) ).thenReturn( TaskId.from( "task-id-4" ) );
 
         final String result = request().path( "repo/snapshot/restore" )
             .entity( readFromFile( "restore_latest_params.json" ), MediaType.APPLICATION_JSON_TYPE )
             .post()
             .getAsString();
 
-        assertJson( "restore.json", result );
+        assertStringJson( "{\"taskId\" : \"task-id-4\"}", result );
     }
 
     @Test
@@ -162,9 +184,11 @@ class SnapshotResourceTest
     protected Object getResourceInstance()
     {
         this.snapshotService = mock( SnapshotService.class );
+        this.taskService = mock( TaskService.class );
 
         final SnapshotResource resource = new SnapshotResource();
         resource.setSnapshotService( snapshotService );
+        resource.setTaskService( taskService );
         return resource;
     }
 }
